Final touches to the clock. I was having issues with the clock loading the wrong color initially until the API data is loaded in completely. I decided to bypass this by setting the default backgrounds to white while the clock loads. I also made the script more seamless by shifting the initial function calls inside a window.onload call.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     text-align:center;
-    background: rgb(0, 109, 128);
+    background: white;
     color:white;
     height:80vh;
 }
@@ -25,7 +25,7 @@ button{
     border:solid;
     border-width:4px;
     color:white;
-    background-color:rgb(0,109,128);
+    background-color:white;
     padding: 30px;
     border-radius: 40px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
